amended code to fit java11